--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@google-cloud/speech": "^6.3.0",
     "aws-sdk": "^2.1494.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "form-data": "^4.0.0",
     "handlebars": "^4.7.8",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
-    "openai": "^4.14.2",
+    "openai": "^4.24.1",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.11.3"
   }
 }
